--- a/app/Resources/views/admin/users/list.html.twig
+++ b/app/Resources/views/admin/users/list.html.twig
@@ -1,8 +1,10 @@
 {% extends 'base.html.twig' %}
-{% block main %}
+
+{% block body %}
+
     <div class="container body-content">
         <div class="well">
-            <h2>All Booking</h2>
+            <h2>All Users</h2>
             <div class="row">
                 <table class="table table-striped table-hover ">
                     <thead>
@@ -31,4 +33,5 @@
             </div>
         </div>
     </div>
+    
 {% endblock %}
