--- a/app/Resources/views/bookings/view.html.twig
+++ b/app/Resources/views/bookings/view.html.twig
@@ -1,10 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block body_id %}
-
-{% endblock %}
-
-{% block main %}
+{% block body %}
 
     <div class="container body-content">
         <div class="row">
