--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -2,38 +2,159 @@
 
 {% block body %}
 
-    <div class="container body-content">
-        <div class="row">
-
-            {% for msg in app.session.flashbag.get('info')  %}
-                <div class="alert alert-success" id="info">
-                    {{ msg }}
+   <section class="home home-width header">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <h1 class="header-title text-center"></h1>
                 </div>
-            {% endfor %}
-            
-            <h2 style="text-align: center;">WELCOME</h2>
-
-            {% for category in categories %}
-                <div class="col-md-4 text-left" style="margin-top: 30px; margin-bottom: 70px;">
-                    <article>
-                        <header>
-
-                        </header>
-                        <div>
-                            <img src="{{ category.imageURL }}" width="370px" height="460px">
-                            <p style="margin-top: 20px; margin-bottom: 30px; font-size: 24px;">{{ category.name }} <span style="margin-left: 20px;">${{ category.price }}</span></p>
-                            <p><a class="btn btn-success" href="{{ path('booking_create') }}">BOOKING</a></p>
+            </div>
+        </div>
+    </section>
+    <div class="container-fluid search-room text-center">
+        <div class="container">
+            <form>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 col-title">
+                            <span >BOOK ONLINE</span>
                         </div>
-
-                        <footer>
-
-                        </footer>
-                    </article>
+                        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+                            <label>Arrival:</label>
+                            <input type="date" class="input-date"  value="2021-07-01">
+                        </div>
+                        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+                            <label>Departure:</label>
+                            <input type="date" class="input-date" value="2021-07-10">
+                        </div>
+                        <div class="col-lg-2 col-md-12 col-sm-12 col-sx-12">
+                            <button type="submit" class="btn btn-danger form-submit">SEARCH ROOM</button>
+                        </div>
+                    </div>
                 </div>
-            {% endfor %}
+            </form>
+        </div>
+    </div>    
+    <div class="container home-container">
+        <h2>WELCOME</h2>
+        <div class="row">
+            <div class="col-md-4 col-sm-12 col-home">
+                <img src="img/double-room.jpg" alt="img" class="img-thumbnail">
+                <div class="room-info">
+                    <h4>Double Room</h4>
+                    <p>Modern and stylish design for you</p>
+                    <button class="btn btn-danger">BOOKING</button>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12 col-home">
+                <img src="img/triple-room.jpg" alt="img" class="img-thumbnail">
+                <div class="room-info">
+                    <h4>Triple Room</h4>
+                    <p>Convenience for all the family</p>
+                    <button class="btn btn-danger">BOOKING</button>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12 col-home">
+                <img src="img/apartment.jpg" alt="img" class="img-thumbnail">
+                <div class="room-info">
+                    <h4>Apartment</h4>
+                    <p>Modern design, comfort and convenience</p>
+                    <button class="btn btn-danger">BOOKING</button>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12 col-home">
+                <img src="img/double-room-L.jpg" alt="img" class="img-thumbnail">
+                <div class="room-info">
+                    <h4>Double Room L</h4>
+                    <p>Luxury, elegance and comfort</p>
+                    <button class="btn btn-danger">BOOKING</button>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12 col-home">
+                <img src="img/apartment-L.jpg" alt="img" class="img-thumbnail">
+                <div class="room-info">
+                    <h4>Apartment L</h4>
+                    <p>Luxury, elegance and comfort</p>
+                    <button class="btn btn-danger">BOOKING</button>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12 col-home">
+                <img src="img/apartment-super-L.jpg" alt="img" class="img-thumbnail">
+                <div class="room-info">
+                    <h4>Apartment Super L</h4>
+                    <p>Super luxury, elegance and comfort</p>
+                    <button class="btn btn-danger">BOOKING</button>
+                </div>
+            </div>
         </div>
     </div>
-
+    <div class="container-fluid home-offer text-center"> 
+        <div class="container">
+            <h5>OFFERS</h5>
+            <hr />
+            <p class="title">Selected offers</p>
+            <div class="row">
+                <div class="col-md-10 offset-md-1">
+                    <div class="row">
+                        <div class="col-md-7 col-sm-12 col-image">
+                            <img src="img/offer-early-booking.jpg" alt="img" class="img-thumbnail">
+                        </div>
+                        <div class="col-md-5 col-sm-12 col-text">
+                            <div class="offer-info text-left">
+                                <h4>Summer 2021 in Hotel & SPA</h4>
+                                <p>June 2021 - July 2021</p>
+                                <p>Early bookings with up to -25% discount</p>
+                                <p><a href="offers.html" style="">See More</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+        </div>
+    </div>        
+    <div class="container-fluid offer-bottom text-center"> 
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 offset-md-1">
+                    <p>We present you selected offers for your stay at Hotel & SPA. In case you want something special for you, our teams will try to help!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container custom-container-home text-center">
+        <div class="row custom-row">
+            <div class="col-md-10 offset-md-1">
+                <div class="row custom-row">
+                    <div class="col-md-6 col-sm-12 custom-col col-venues">
+                        <h5>VENUES</h5>
+                        <hr/>
+                        <h3>Restaurants, bar and cafe</h3>
+                        <p>Stylish atmosphere, the quality service and a variety of special selected dishes.</p>
+                        <a href="venues.html"><button class="btn btn-danger btn-outline">READ MORE</button></a>
+                    </div>
+                    <div class="col-md-6 col-sm-12 custom-col">
+                        <img src="img/home-venues.jpg" alt="img" class="img-thumbnail">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row custom-row">
+            <div class="col-md-10 offset-md-1">
+                <div class="row custom-row">
+                    <div class="col-md-6 col-sm-12 custom-col">
+                        <img src="img/home-relax-zone.jpg" alt="img" class="img-thumbnail">
+                    </div>
+                    <div class="col-md-6 col-sm-12 custom-col col-relax-zone">
+                        <h5>RELAX ZONE</h5>
+                        <hr />
+                        <h3>Sauna and pools</h3>
+                        <p>SPA & Wellness center of the hotel offers harmonious and a healthy environment.</p>
+                        <a href="spa-center.html"><button class="btn btn-danger btn-outline">READ MORE</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>  
 
 {% endblock %}
 
