--- a/app/Resources/views/admin/bookings/edit.html.twig
+++ b/app/Resources/views/admin/bookings/edit.html.twig
@@ -1,10 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block body_id %}
-
-{% endblock %}
-
-{% block main %}
+{% block body %}
 
     <div class="container body-content span=8 offset=2">
         <div class="well">
