--- a/app/Resources/views/admin/bookings/list.html.twig
+++ b/app/Resources/views/admin/bookings/list.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
-{% block main %}
+
+{% block body %}
+
     <div class="container body-content">
         <div class="well">
             <h2>All Booking -
@@ -37,4 +39,5 @@
             </div>
         </div>
     </div>
+    
 {% endblock %}
