--- a/app/Resources/views/admin/categories/list.html.twig
+++ b/app/Resources/views/admin/categories/list.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
-{% block main %}
+
+{% block body %}
+
 <div class="container body-content">
     <div class="well">
         <h2>All Categories -
@@ -32,4 +34,5 @@
         </div>
     </div>
 </div>
+
 {% endblock %}
