--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -1,8 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block body_id 'login' %}
-
-{% block main %}
+{% block body %}
 
     <div class="container body-content span=8 offset=2">
         <div class="well">
@@ -24,9 +22,8 @@
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
-                            {#<a class="btn btn-default" href="{{ path('blog_index') }}">Cancel</a>#}
-
                             <button type="submit" class="btn btn-primary">Login</button>
+                            <a href="{{ path('user_register') }}">Register</a>
                         </div>
                     </div>
 
@@ -34,4 +31,5 @@
             </form>
         </div>
     </div>
+    
 {% endblock %}
