--- a/app/Resources/views/users/profile.html.twig
+++ b/app/Resources/views/users/profile.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block main %}
+{% block body %}
 
-    <h1>Hello {{ user.email }}</h1>
-
-    <h3>Full Name: {{ user.fullName }}</h3>
+    <div class="container">
+        <h1>Hello {{ user.email }}</h1>
+        <h3>Full Name: {{ user.fullName }}</h3>
+    </div>
 
 {% endblock %}
