add validations in register form

--- a/app/Resources/views/users/register.html.twig
+++ b/app/Resources/views/users/register.html.twig
@@ -4,31 +4,45 @@
 
     <div class="container body-content span=8 offset=2">
         <div class="well">
+            {% for msg in app.session.flashbag.get('errors')  %}
+                <div class="alert alert-danger">
+                    {{ msg }}
+                </div>
+            {% endfor %}
             <form class="form-horizontal" action="{{ path('user_register') }}" method="post">
                 <fieldset>
                     <legend>Register</legend>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="user_email">Email</label>
                         <div class="col-sm-4 ">
-                            <input class="form-control" id="user_email" placeholder="Email" name="user[email]" >
+                            <input  type="text" class="form-control" id="user_email" placeholder="Email" name="user[email]"  value="{{ (form.email.vars.value )}}">
+                        </div>
+                        <div class="form-errors">
+                            {{ form_errors(form.email) }}
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="user_fullName">Full Name</label>
                         <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="user_fullName" placeholder="Full Name" name="user[fullName]" >
+                            <input type="text" class="form-control" id="user_fullName" placeholder="Full Name" name="user[fullName]"  value="{{ (form.fullName.vars.value )}}">
+                        </div>
+                        <div class="form-errors">
+                            {{ form_errors(form.email) }}
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="user_password_first">Password</label>
                         <div class="col-sm-4">
-                            <input type="password" class="form-control" id="user_password_first" placeholder="Password" name="user[password][first]" required>
+                            <input type="password" class="form-control" id="user_password_first" placeholder="Password" name="user[password][first]">
+                        </div>
+                        <div class="form-errors">
+                            {{ form_errors(form.password.first) }}
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="user_password_second">Confirm Password</label>
                         <div class="col-sm-4">
-                            <input type="password" class="form-control" id="user_password_second" placeholder="Password" name="user[password][second]" required>
+                            <input type="password" class="form-control" id="user_password_second" placeholder="Password" name="user[password][second]">
                         </div>
                     </div>
                     <div class="form-group">
