--- a/app/Resources/views/users/profile.html.twig
+++ b/app/Resources/views/users/profile.html.twig
@@ -4,7 +4,7 @@
 
     <div class="container">
         <h1>Hello {{ user.email }}</h1>
-        <h3>Full Name: {{ user.fullName }}</h3>
+        <h3>Login Name: {{ user.loginName }}</h3>
     </div>
 
 {% endblock %}
