--- a/app/Resources/views/users/register.html.twig
+++ b/app/Resources/views/users/register.html.twig
@@ -14,7 +14,7 @@
                     <legend>Register</legend>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="user_email">Email</label>
-                        <div class="col-sm-4 ">
+                        <div class="col-sm-4">
                             <input  type="text" class="form-control" id="user_email" placeholder="Email" name="user[email]"  value="{{ (form.email.vars.value )}}">
                         </div>
                         <div class="form-errors">
@@ -22,12 +22,12 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="user_fullName">Full Name</label>
-                        <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="user_fullName" placeholder="Full Name" name="user[fullName]"  value="{{ (form.fullName.vars.value )}}">
+                        <label class="col-sm-4 control-label" for="user_loginName">Login Name</label>
+                        <div class="col-sm-4">
+                            <input type="text" class="form-control" id="user_loginName" placeholder="Login Name" name="user[loginName]"  value="{{ (form.loginName.vars.value )}}">
                         </div>
                         <div class="form-errors">
-                            {{ form_errors(form.email) }}
+                            {{ form_errors(form.loginName) }}
                         </div>
                     </div>
                     <div class="form-group">
@@ -48,10 +48,9 @@
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
                             {#<a class="btn btn-default" href="{{ path('hotel_index') }}">Cancel</a>#}
-                            <button type="submit" class="btn btn-primary">Register</button>
+                            <button type="submit" class="btn btn-danger">Register</button>
                         </div>
                     </div>
-
                     {{  form_row(form._token) }}
                 </fieldset>
             </form>
