--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -43,6 +43,10 @@
                                         <a class="dropdown-item" href="{{ path('status_create') }}">Statuses</a>
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="{{ path('admin_users') }}">Users</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="{{ path('guest_create') }}">Guests</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="{{ path('stay_create') }}">Stays</a>
                                     </div>
                                 </li>
                             {% endif %}
