--- a/app/Resources/views/admin/bookings/list.html.twig
+++ b/app/Resources/views/admin/bookings/list.html.twig
@@ -5,7 +5,7 @@
     <div class="container body-content">
         <div class="well">
             <h2>All Booking -
-                <a href="{{ path('admin_booking_create') }}" class="btn btn-warning">Create New</a>
+                <a href="{{ path('booking_create') }}" class="btn btn-warning">Create New</a>
             </h2>
             <div class="row">
                 <table class="table table-striped table-hover ">
