--- a/app/Resources/views/bookings/create.html.twig
+++ b/app/Resources/views/bookings/create.html.twig
@@ -59,7 +59,7 @@
                     <div class="form-group">
                         <div class="col-sm-4 col-sm-offset-4">
                             {#<a class="btn btn-default" href="{{ path('hotel_index') }}">Cancel</a>#}
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-danger">Submit</button>
                         </div>
                     </div>
 
